--- a/devfile.yaml
+++ b/devfile.yaml
@@ -32,19 +32,19 @@ commands:
     actions:
       - type: exec
         workdir: '/${CHE_PROJECTS_ROOT}/summit-lab-spring-music'
-        command: mvn clean install
+        command: ./mvnw clean install
         component: spring-music
   - name: Run application locally
     actions:
       - type: exec
         workdir: '/${CHE_PROJECTS_ROOT}/summit-lab-spring-music'
-        command: mvn clean spring-boot:run
+        command: ./mvnw clean spring-boot:run
         component: spring-music
   - name: Run application locally (debug)
     actions:
       - type: exec
         component: spring-music
-        command: mvn -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 clean spring-boot:run
+        command: ./mvnw -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 clean spring-boot:run
         workdir: '${CHE_PROJECTS_ROOT}/summit-lab-spring-music'
   - name: Dependency analysis
     actions:
@@ -56,7 +56,7 @@ commands:
     actions:
       - type: exec
         workdir: '/${CHE_PROJECTS_ROOT}/summit-lab-spring-music'
-        command: mvn clean fabric8:deploy -Popenshift -DskipTests
+        command: ./mvnw clean fabric8:deploy -Popenshift -DskipTests
         component: spring-music
   - name: Remote debug
     actions:
