--- a/misc/templates/nexus-server-ocp4.yml
+++ b/misc/templates/nexus-server-ocp4.yml
@@ -7,76 +7,48 @@ metadata:
 spec:
   nexusVolumeSize: 10Gi
   nexusSsl: True
-  nexusImage: registry.connect.redhat.com/sonatype/nexus-repository-manager
-  nexusImageTag: latest
-  nexusCpuRequest: 4
-  nexusCpuLimit: 4
+  nexusCpuRequest: 1
+  nexusCpuLimit: 2
   nexusMemoryRequest: 2Gi
   nexusMemoryLimit: 2Gi
+  nexusImageTag: 3.20.1-01-ubi-3
   nexus_repos_maven_proxy:
   - name: maven-central
     remote_url: https://repo1.maven.org/maven2/
-    blob_store: default
-    strict_content_validation: true
-    version_policy: release # release, snapshot or mixed
-    layout_policy: strict # strict or permissive
+    layout_policy: permissive
   - name: redhat-ga
     remote_url: https://maven.repository.redhat.com/ga/
-    blob_store: default
-    strict_content_validation: true
-    version_policy: release # release, snapshot or mixed
-    layout_policy: strict # strict or permissive
+    layout_policy: permissive
   - name: jboss
     remote_url: https://repository.jboss.org/nexus/content/groups/public
-    blob_store: default
-    strict_content_validation: true
-    version_policy: release # release, snapshot or mixed
-    layout_policy: strict # strict or permissive
   nexus_repos_maven_hosted:
   - name: releases
-    blob_store: default
+    version_policy: release
     write_policy: allow_once
-    strict_content_validation: true
-    version_policy: release # release, snapshot or mixed
-    layout_policy: strict # strict or permissive
   - name: libs-snapshot
-    strict_content_validation: true
     version_policy: mixed
     write_policy: allow
     layout_policy: permissive
-    blob_store: default
   nexus_repos_maven_group:
   - name: maven-all-public
-    blob_store: default
-    strict_content_validation: true
     member_repos:
-    - maven-central
-    - redhat-ga
-    - jboss
+      - maven-central
+      - redhat-ga
+      - jboss
   - name: maven-all
-    blob_store: default
-    strict_content_validation: true
     member_repos:
-    - maven-central
-    - redhat-ga
-    - jboss
-    - libs-snapshot
+      - maven-central
+      - redhat-ga
+      - jboss
+      - libs-snapshot
   nexus_repos_docker_hosted:
   - name: docker
     http_port: 5000
-    https_port: 5001
     v1_enabled: True
-    blob_store: default
-    strict_content_validation: true
-    write_policy: allow_once # allow_once or allow
   nexus_repos_npm_proxy:
   - name: npm
     remote_url: https://registry.npmjs.org
-    blob_store: default
-    strict_content_validation: true
   nexus_repos_npm_group:
   - name: npm-all
-    blob_store: default
-    strict_content_validation: true
     member_repos:
-    - npm
+      - npm
