Upgrade to Spring boot 2.3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,8 @@ logging:
   level:
     root: WARN
     com.redhat.springmusic: DEBUG
+
+server:
+  error:
+    include-exception: true
+    include-stacktrace: always
