--- a/pom.xml
+++ b/pom.xml
@@ -11,15 +11,11 @@
 
 	<properties>
 		<java.version>11</java.version>
-<!--		<java.version>11</java.version>-->
-		<spring-boot.version>2.2.5.RELEASE</spring-boot.version>
-		<spring-cloud.version>Hoxton.SR2</spring-cloud.version>
-		<springdoc.version>1.2.33</springdoc.version>
+		<spring-boot.version>2.3.3.RELEASE</spring-boot.version>
+		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+		<springdoc.version>1.4.6</springdoc.version>
 		<lombok.version>1.18.12</lombok.version>
-<!--		For OpenShift 3 -->
-<!--		<fabric8-maven-plugin.version>3.5.42</fabric8-maven-plugin.version> -->
 		<fabric8-maven-plugin.version>4.4.1</fabric8-maven-plugin.version>
-<!--		<fabric8-maven-plugin.version>4.3.1</fabric8-maven-plugin.version>-->
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 <!--		<fabric8.generator.from>registry.redhat.io/openjdk/openjdk-11-rhel8:latest</fabric8.generator.from>-->
@@ -65,6 +61,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
 		<dependency>
