Upgrade to Spring boot 2.3
Updating readiness/liveness probes

--- a/misc/templates/dev-template.yml
+++ b/misc/templates/dev-template.yml
@@ -147,7 +147,7 @@ objects:
               livenessProbe:
                 failureThreshold: 3
                 httpGet:
-                  path: /actuator/health
+                  path: /actuator/health/liveness
                   port: 8080
                   scheme: HTTP
                 initialDelaySeconds: 30
@@ -165,7 +165,7 @@ objects:
               readinessProbe:
                 failureThreshold: 3
                 httpGet:
-                  path: /actuator/health
+                  path: /actuator/health/readiness
                   port: 8080
                   scheme: HTTP
                 initialDelaySeconds: 30
