--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.redhat.summit2019</groupId>
 	<artifactId>summit-lab-spring-music</artifactId>
@@ -15,10 +14,9 @@
 		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
 		<springdoc.version>1.4.6</springdoc.version>
 		<lombok.version>1.18.12</lombok.version>
-		<fabric8-maven-plugin.version>4.4.1</fabric8-maven-plugin.version>
+		<jkube-maven-plugin.version>1.0.0</jkube-maven-plugin.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<fabric8.generator.from>registry.redhat.io/openjdk/openjdk-11-rhel8:latest</fabric8.generator.from>
 	</properties>
 
 	<dependencyManagement>
@@ -254,9 +252,9 @@
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>io.fabric8</groupId>
-						<artifactId>fabric8-maven-plugin</artifactId>
-						<version>${fabric8-maven-plugin.version}</version>
+						<groupId>org.eclipse.jkube</groupId>
+						<artifactId>openshift-maven-plugin</artifactId>
+						<version>${jkube-maven-plugin.version}</version>
 						<executions>
 							<execution>
 								<id>fmp</id>
