--- a/misc/templates/sonarqube-template-ocp4.yml
+++ b/misc/templates/sonarqube-template-ocp4.yml
@@ -268,7 +268,7 @@ objects:
               - postgresql
             from:
               kind: ImageStreamTag
-              name: postgresql:9.6
+              name: postgresql:10-el8
               namespace: openshift
           type: ImageChange
         - type: ConfigChange
