--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,15 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<spring-boot.version>2.3.6.RELEASE</spring-boot.version>
-		<spring-cloud.version>Hoxton.SR9</spring-cloud.version>
-		<springdoc.version>1.5.0</springdoc.version>
-		<lombok.version>1.18.16</lombok.version>
-		<jkube-maven-plugin.version>1.0.2</jkube-maven-plugin.version>
+		<spring-boot.version>2.6.3</spring-boot.version>
+		<spring-cloud.version>2021.0.0</spring-cloud.version>
+		<springdoc.version>1.6.6</springdoc.version>
+		<lombok.version>1.18.22</lombok.version>
+		<jkube-maven-plugin.version>1.6.0</jkube-maven-plugin.version>
 		<jkube.generator.from>registry.redhat.io/ubi8/openjdk-11:latest</jkube.generator.from>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<surefire.version>3.0.0-M5</surefire.version>
 	</properties>
 
 	<dependencyManagement>
@@ -74,7 +75,7 @@
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-kubernetes-all</artifactId>
+			<artifactId>spring-cloud-starter-kubernetes-client-config</artifactId>
 		</dependency>
 
 		<dependency>
@@ -173,7 +174,7 @@
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
-				<version>4.0.0</version>
+				<version>4.9.10</version>
 				<executions>
 					<execution>
 						<id>get-the-git-infos</id>
@@ -212,23 +213,23 @@
 
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>${surefire.version}</version>
 			</plugin>
 
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>${surefire.version}</version>
 			</plugin>
 
 			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.2</version>
+				<version>3.0.0-M2</version>
 			</plugin>
 
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.5</version>
+				<version>0.8.7</version>
 				<executions>
 					<execution>
 						<goals>
