--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,76 +1,59 @@
-apiVersion: 1.0.0
+schemaVersion: 2.1.0
 metadata:
   name: spring-music
 projects:
   - name: summit-lab-spring-music
-    source:
-      type: git
-      location: 'https://github.com/edeandrea/summit-lab-spring-music.git'
-      branch: pipeline
+    git:
+      remotes:
+        origin: 'https://github.com/edeandrea/summit-lab-spring-music.git'
+      checkoutFrom:
+        revision: pipeline
 components:
-  - id: redhat/dependency-analytics/latest
-    type: chePlugin
-  - id: redhat/java11/latest
-    type: chePlugin
-  - id: redhat/vscode-yaml/latest
-    type: chePlugin
-  - id: redhat/vscode-xml/latest
-    type: chePlugin
-  - mountSources: true
-    endpoints:
-      - name: spring-music
-        port: 8080
-    memoryLimit: 2048Mi
-    type: dockerimage
-    volumes:
-      - name: m2
-        containerPath: /home/jboss/.m2
-    alias: spring-music
-    image: 'registry.redhat.io/codeready-workspaces/plugin-java11-rhel8:2.5'
+  - name: spring-music
+    container:
+      image: 'registry.redhat.io/codeready-workspaces/plugin-java11-rhel8:latest'
+      mountSources: true
+      memoryLimit: 2048Mi
+      volumeMounts:
+        - name: m2
+          path: /home/jboss/.m2
+      endpoints:
+        - name: spring-music
+          targetPort: 8080
 commands:
-  - name: Build
-    actions:
-      - type: exec
-        workdir: '/${CHE_PROJECTS_ROOT}/summit-lab-spring-music'
-        command: ./mvnw clean install
-        component: spring-music
-  - name: Run application locally
-    actions:
-      - type: exec
-        workdir: '/${CHE_PROJECTS_ROOT}/summit-lab-spring-music'
-        command: ./mvnw clean spring-boot:run -DskipTests
-        component: spring-music
-  - name: Run application locally (debug)
-    actions:
-      - type: exec
-        component: spring-music
-        command: ./mvnw clean spring-boot:run -DskipTests -Dspring-boot.run.jvmArguments="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005"
-        workdir: '${CHE_PROJECTS_ROOT}/summit-lab-spring-music'
-  - name: Dependency analysis
-    actions:
-      - type: exec
-        workdir: '${CHE_PROJECTS_ROOT}/summit-lab-spring-music'
-        component: spring-music
-        command: '${HOME}/stack-analysis.sh -f ${CHE_PROJECTS_ROOT}/summit-lab-spring-music/pom.xml -p ${CHE_PROJECTS_ROOT}/summit-lab-spring-music'
-  - name: Deploy to OpenShift
-    actions:
-      - type: exec
-        workdir: '/${CHE_PROJECTS_ROOT}/summit-lab-spring-music'
-        command: ./mvnw clean oc:deploy -Popenshift -DskipTests
-        component: spring-music
-  - name: Remote debug
-    actions:
-      - type: vscode-launch
-        referenceContent: |
-          {
-            "version": "0.2.0",
-            "configurations": [
-              {
-                "type": "java",
-                "request": "attach",
-                "name": "Attach to Remote App",
-                "hostName": "localhost",
-                "port": 5005
-              }
-            ]
-          }
+  - id: build
+    exec:
+      component: spring-music
+      commandLine: ./mvnw clean install
+      workingDir: '${PROJECTS_ROOT}/summit-lab-spring-music'
+      group:
+        kind: build
+        isDefault: true
+  - id: run-application-locally
+    exec:
+      workingDir: '${PROJECTS_ROOT}/summit-lab-spring-music'
+      commandLine: ./mvnw clean spring-boot:run -DskipTests
+      component: spring-music
+      group:
+        kind: run
+        isDefault: true
+  - id: debug-application-locally
+    exec:
+      component: spring-music
+      commandLine: ./mvnw clean spring-boot:run -DskipTests -Dspring-boot.run.jvmArguments="-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005"
+      workingDir: '${PROJECTS_ROOT}/summit-lab-spring-music'
+      group:
+        kind: debug
+        isDefault: true
+  - id: dependency-analysis
+    exec:
+      workingDir: '${PROJECTS_ROOT}/summit-lab-spring-music'
+      component: spring-music
+      commandLine: '${HOME}/stack-analysis.sh -f ${PROJECTS_ROOT}/summit-lab-spring-music/pom.xml -p ${PROJECTS_ROOT}/summit-lab-spring-music'
+  - id: deploy-to-openshift
+    exec:
+      workingDir: '${PROJECTS_ROOT}/summit-lab-spring-music'
+      commandLine: ./mvnw clean oc:deploy -Popenshift -DskipTests
+      component: spring-music
+      group:
+        kind: run
