--- a/devfile.yaml
+++ b/devfile.yaml
@@ -13,7 +13,7 @@ components:
     volume: {}
   - name: spring-music
     container:
-      image: 'registry.redhat.io/codeready-workspaces/plugin-java11-rhel8:latest'
+      image: 'quay.io/devfile/universal-developer-image:ubi8-0e189d9'
       mountSources: true
       memoryLimit: 2048Mi
       volumeMounts:
