--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,15 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<spring-boot.version>2.6.3</spring-boot.version>
-		<spring-cloud.version>2021.0.0</spring-cloud.version>
-		<springdoc.version>1.6.6</springdoc.version>
-		<lombok.version>1.18.22</lombok.version>
-		<jkube-maven-plugin.version>1.6.0</jkube-maven-plugin.version>
+		<spring-boot.version>2.7.10</spring-boot.version>
+		<spring-cloud.version>2021.0.6</spring-cloud.version>
+		<springdoc.version>1.6.15</springdoc.version>
+		<lombok.version>1.18.26</lombok.version>
+		<jkube-maven-plugin.version>1.12.0</jkube-maven-plugin.version>
 		<jkube.generator.from>registry.redhat.io/ubi8/openjdk-11:latest</jkube.generator.from>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<surefire.version>3.0.0-M5</surefire.version>
+		<surefire.version>3.0.0</surefire.version>
 	</properties>
 
 	<dependencyManagement>
@@ -115,8 +115,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
