--- a/devfile.yaml
+++ b/devfile.yaml
@@ -65,7 +65,7 @@ commands:
       component: spring-music
       group:
         kind: run
-events:
-  postStart:
-    - switch-to-java-17
+#events:
+#  postStart:
+#    - switch-to-java-17
 
