--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     schedule:
       interval: daily
     ignore:
-      - dependency-name: "org.webjars.*"
+      - dependency-name: "org.webjars:*"
 
   - package-ecosystem: github-actions
     directory: /
