--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,7 @@
 			<plugin>
 				<groupId>org.graalvm.buildtools</groupId>
 				<artifactId>native-maven-plugin</artifactId>
+				<extensions>true</extensions>
 			</plugin>
 
 			<plugin>
