Adding native to build & test

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -85,15 +85,12 @@ jobs:
         run: ./mvnw -B clean native:compile -Pnative -Dmaven.compiler.release=${{ matrix.graal.java }}
 
       - name: Run native (${{ matrix.graal.graal }})
-        uses: BerniWittmann/background-server-action@v1
-        with:
-          command: target/summit-lab-spring-music
-          wait-on: http://localhost:8080/index.html
-#        uses: JarvusInnovations/background-action@v1
-#        with:
-#          log-output-if: true
-#          log-output-resume: true
-#          tail: true
-#          wait-on: http-get://localhost:8080/index.html
-#          working-directory: target
-#          run: summit-lab-spring-music
+        shell: bash
+        working-directory: target
+        run: |
+          summit-lab-spring-music &
+          echo $! > app.pid
+          
+          sleep 10
+          curl -f http://localhost:8080/index.html
+          kill -9 `cat app.pid`
