--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -63,7 +63,7 @@ jobs:
         id: check-graal-cache
         uses: actions/cache@v3
         with:
-          path: graal-${{ matrix.graal.graal }}
+          path: graalvm-community-jdk-${{ matrix.graal.graal }}_linux-x64_bin.tar.gz
           key: graal-distro-${{ matrix.graal.graal }}
 
       - name: Download GraalVM CE ${{ matrix.graal.graal }}
