Update for jkube

--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<layers>
+						<enabled>false</enabled>
+					</layers>
+				</configuration>
 			</plugin>
 
 			<plugin>
